# cpu-energy-consumption-comparative-analysis

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  benchmark.sh
.cargo/: config.toml
aya-start/: Cargo.toml
aya-start-common/: Cargo.toml
aya-start-ebpf/: Cargo.toml
aya-start-ebpf/src/: main.rs
aya-start/src/: main.rs
benchmark/: Cargo.toml
benchmark/benches/: benchmark_probes.rs
benchmark/src/: main.rs
cli_poll_rapl/: Cargo.toml  README.md
cli_poll_rapl/benches/: benchmark_probes.rs
cli_poll_rapl/src/: bench.rs  cli.rs  main.rs  main_bad.rs  main_optimized.rs
ebpf/: Cargo.toml  README.md
ebpf/src/: main.rs
ebpf_common/: Cargo.toml  README.md
ebpf_common/src/: lib.rs
rapl_probes/: Cargo.toml  README.fr.md  README.md
rapl_probes/src/: ebpf.rs  lib.rs  msr.rs  perf_event.rs  powercap.rs
rapl_probes/tests/: probes.rs
userspace/: Cargo.toml
userspace/benches/: benchmark_probes.rs
userspace/src/: lib.rs  main.rs  powercap.rs  rapl.rs
userspace/src/probes/: ebpf.rs  mod.rs  msr.rs  perf_rapl.rs  powercap.rs
xtask/src/: build_ebpf.rs  run.rs
