[package]
name = "ebpf_common"
version = "0.1.0"
edition = "2021"

[features]
default = []

# Feature to enable when using this module as a dependency of the userspace program.
# Don't enable it for the ebpf kernel program.
user = ["aya"]

[dependencies]
aya = { version = ">=0.11", optional = true }

[lib]
path = "src/lib.rs"
