[package]
name = "rapl_probes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
anyhow = "1"
perf-event-open-sys = "4.0.0"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
env_logger = "0.10"
enum-map = "2.5.0"

# Remove debug! logging statements in release move
log = { version = "0.4", features = ["release_max_level_warn"] }
bytes = "1.4.0"
