[package]
name = "rapl_probes"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ebpf_common = { path = "../ebpf_common", features = ["user"], optional = true}
aya = { version = ">=0.11", features=["async_tokio"], optional = true}
aya-log = { version = "0.1", optional = true}
anyhow = "1"
perf-event-open-sys = "4.0.0"
clap = { version = "4.2.1", features = ["derive"] }
regex = "1.7.3"
env_logger = "0.10"
enum-map = "2.5.0"

# Remove debug! logging statements in release move
log = { version = "0.4", features = ["release_max_level_warn"] }
bytes = "1.4.0"

[features]
enable_ebpf = ["aya", "aya-log", "ebpf_common"]
